# JenkinsBreaker

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  jenkins-mid-api.json  jenkins-mid-logs.txt  launch_console.py  launch_tui.py  launch_webui.py  pyproject.toml  requirements.txt
.github/: LOCAL_VALIDATION.md  README.md
config/: exploits.yaml  payloads.yaml  targets.example.yaml
docs/: chaining.md  docker-lab.md  modules.md
docs/screenshots/: README.md
examples/: basic_exploit.py  custom_module.py  exploit_chain.py
jenkins-lab/: PLUGIN_VULNERABILITY_MAP.md  QUICK_START.md  README.md  README_MULTI_LAB.md  docker-compose-multi.yml  setup_multi_lab.ps1  setup_multi_lab.sh  start_all_labs.ps1  start_all_labs.sh
jenkins-lab/jenkins/: Dockerfile  plugins.txt
jenkins-lab/jenkins-mid/: Dockerfile  plugins-mid.txt
jenkins-lab/jenkins-mid/secrets/: backup_script.sh  cloud_credentials.env  database_credentials.env  docker_config.json  id_rsa
jenkins-lab/jenkins-new/: Dockerfile  plugins-new.txt
jenkins-lab/jenkins/secrets/: api_keys.env  aws_credentials  maven_settings.xml  npmrc
jenkins-lab/scripts/: container_escape.sh  credential_harvester.sh  performance_benchmark.sh  stealth_operations.sh
scripts/: README.md  capture_screenshots.py  capture_ui_screenshots.py  local_ci.ps1  local_ci.sh  setup_dev_environment.ps1  setup_dev_environment.sh
src/jenkins_breaker/: __init__.py  __main__.py
src/jenkins_breaker/chain/: __init__.py  chains.py  engine.py
src/jenkins_breaker/cloud/: __init__.py  docker_escape.py  k8s_breakout.py  metadata.py
src/jenkins_breaker/core/: __init__.py  authentication.py  config.py  enumeration.py  fuzzer.py  session.py
src/jenkins_breaker/exfil/: __init__.py  artifact_route.py
src/jenkins_breaker/infrastructure/: __init__.py  cookie_forge.py  file_reader.py
src/jenkins_breaker/modules/: __init__.py  base.py  cve_2016_0792.py  cve_2017_1000353.py  cve_2018_1000402.py  cve_2018_1000600.py  cve_2018_1000861.py  cve_2019_1003000.py  cve_2019_1003001.py  cve_2019_1003029.py  cve_2019_1003040.py  cve_2019_10358.py  cve_2020_2100.py  cve_2020_2249.py  cve_2021_21602.py  cve_2021_21686.py  cve_2022_30945.py  cve_2022_34177.py  cve_2022_43401.py  cve_2023_24422.py  cve_2023_27903.py  cve_2023_3519.py  cve_2024_23897.py  cve_2024_34144.py  cve_2024_43044.py  cve_2024_47803.py  cve_2025_31722.py  feature_job_config.py  feature_script_console.py
src/jenkins_breaker/payloads/: __init__.py  generator.py  jnlp_agent.py  meterpreter.py  obfuscator.py  powershell.py  reverse_shell.py
src/jenkins_breaker/post/: __init__.py  base.py  reverse_shell.py  session_manager.py  shell.py
src/jenkins_breaker/postex/: __init__.py  auto_loot.py  credentials.py  groovy_shell.py  init_script.py  jenkins_decrypt.py  lateral.py  log_miner.py  memory_hook.py  node_worm.py  persistence.py  reconnaissance.py  ui_hijack.py
src/jenkins_breaker/reporting/: __init__.py
src/jenkins_breaker/reporting/formats/: __init__.py  html_format.py  json_format.py  markdown_format.py
src/jenkins_breaker/tools/: __init__.py  scaffold.py  validator.py
src/jenkins_breaker/ui/: __init__.py  auth.py  console.py  loot.py  macros.py  manager.py  renderer.py  server.py  shared_state.py  terminal.py  tui.py  ui_bridge.py  visualization.py  webui.py  workspace.py
src/jenkins_breaker/ui/ops_scripts/: __init__.py  base.py
src/jenkins_breaker/ui/ops_scripts/escalate/: __init__.py  always_install_elevated.py  (+24 more)
src/jenkins_breaker/utils/: __init__.py  logger.py
tests/: README.md  check_registry.py  conftest.py  identify_plugin_requirements.py  quick_exploit_test.py  test_cli_launch.py  test_console_commands.py  test_core_functionality.py  test_enumeration.py  test_imports.py  test_jenkins_connection.py  verify_exploits.py
tests/data/: master_key  secret_key
tests/docker/: README.md  jenkins-lab-reset.py  jenkins-lab-reset.sh
tests/integration/: test_exploits.py  test_full_chain.py  test_postex.py
tests/unit/: test_auth.py  test_chain.py  test_payloads.py  test_session.py
(+136 files in other folders)
